crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_landing_block_releases_the_call_temporaries_still_in_flight.snap
---
source: crates/nvs-ir/src/lower/tests.rs
expression: "print_function(&f, map.file(file))"
---
fn <script>() -> tagged {
  bb0:
    safepoint
    ; stmt s0 @2:1-7:2
    ; stmt s1 @3:3-3:43
    v0 = const.str "ff"  ; string
    v1 = core.call nvs_core_encoding_from_hex(v0) ! bb3  ; bytes
    release v0
    release v1
    jump bb2
  bb1:
    v2 = take.thrown  ; object
    v3 = instanceof v2, Throwable  ; bool
    branch v3 -> bb6 (e0), bb7 (e1)
  bb2:
    v5 = const.null  ; null
    v6 = tag v5  ; tagged
    return v6
  bb3:
    release v0
    catch -> bb4 else bb5
  bb4:
    jump bb1
  bb5:
    propagate "<script>() at t.nvs:3"
  bb6:
    ; stmt s2 @6:3-6:17
    v4 = const.str "caught"  ; string
    helper.echo_str v4 ! bb8
    release v4
    release v2
    jump bb2
  bb7:
    throw v2 -> bb9
  bb8:
    release v4
    release v2
    propagate "<script>() at t.nvs:6"
  bb9:
    propagate "<script>() at t.nvs:6"
}
