crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_literal_with_fresh_scalar_elements_needs_no_retain.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:26
    v1 = const.int 1  ; int
    v2 = const.int 2  ; int
    v3 = const.int 3  ; int
    v4 = array.new ["0": v1, "1": v2, "2": v3]  ; array
    release v4
    release v0
    return
}
