crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_local_declared_in_one_if_branch_is_released_where_the_branches_merge.snap
---
source: crates/mwl-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, bool) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; bool
    ; stmt s0 @4:5-9:6
    branch v1 -> bb2 (e0), bb3 (e1)
  bb1:
    release v0
    return
  bb2:
    ; stmt s1 @4:13-7:6
    ; stmt s2 @5:7-5:38
    v2 = const.str "AA"  ; string
    v3 = core.call mwl_core_str_lower(v2) ! bb4  ; string
    release v2
    ; stmt s3 @6:7-6:15
    helper.echo_str v3 ! bb5
    release v3
    jump bb1
  bb3:
    ; stmt s4 @7:12-9:6
    ; stmt s5 @8:7-8:17
    v4 = const.str "no"  ; string
    helper.echo_str v4 ! bb6
    release v4
    jump bb1
  bb4:
    release v2
    release v0
    propagate "m() at t.mwl:5"
  bb5:
    release v3
    release v0
    propagate "m() at t.mwl:6"
  bb6:
    release v4
    release v0
    propagate "m() at t.mwl:8"
}
